--- a/uwaves4TransmissionLinesCore.tex
+++ b/uwaves4TransmissionLinesCore.tex
@@ -300,12 +300,12 @@ Assume \( R \ll \omega L \) and \( G \ll \omega C \).  In this case we have
 j \omega \sqrt{L C} \sqrt{
 \lr{ 1 + \frac{R}{j\omega L} }
 \lr{ 1 + \frac{G}{j\omega C} }
-}
-\approx
+} \\
+&\approx
 j \omega \sqrt{L C}
 \lr{ 1 + \frac{R}{2 j\omega L} }
-\lr{ 1 + \frac{G}{2 j\omega C} }
-\approx
+\lr{ 1 + \frac{G}{2 j\omega C} } \\
+&\approx
 j \omega \sqrt{L C}
 \lr{ 1 + \frac{R}{2 j\omega L}  + \frac{G}{2 j\omega C} }
 \\ &=
