--- a/uwavesDeck2WaveEquationCore.tex
+++ b/uwavesDeck2WaveEquationCore.tex
@@ -549,11 +549,10 @@ Hence
 \end{equation}
 
 Now integrate over V, using the divergence theorem
-
 \begin{equation}\label{eqn:uwavesLecture2:1280}
 \begin{aligned}
-\int_V
-\spacegrad \cdot \lr{ \BE \cross \BH^\conj } dV
+\int_V &
+\spacegrad \cdot \lr{ \BE \cross \BH^\conj } dV \\
 &=
 \oint \lr{ \BE \cross \BH^\conj } \cdot d\BS
 \\ &=
@@ -562,11 +561,10 @@ Now integrate over V, using the divergence theorem
 - \int_V \BJ_\txts^\conj \cdot \BE dV,
 \end{aligned}
 \end{equation}
-
 or
 \begin{equation}\label{eqn:uwavesLecture2:1300}
 \begin{aligned}
--\inv{2} \int_V \BJ_\txts^\conj \cdot \BE dV,
+-\inv{2} &\int_V \BJ_\txts^\conj \cdot \BE dV \\
 &=
 + \inv{2} \oint \lr{ \BE \cross \BH^\conj } \cdot d\BS
 + \frac{\sigma}{2} \int_V \Abs{\BE}^2 dV
@@ -574,7 +572,8 @@ or
 \\ &=
 + \inv{2} \oint \lr{ \BE \cross \BH^\conj } \cdot d\BS
 + \frac{\sigma}{2} \int_V \Abs{\BE}^2 dV
-+ \frac{\omega}{2} \int_V \lr{ \epsilon'' \Abs{\BE}^2 + \mu'' \Abs{\BH}^2 } dV
++ \frac{\omega}{2} \int_V \lr{ \epsilon'' \Abs{\BE}^2 + \mu'' \Abs{\BH}^2 } dV \\
+&\quad
 + j \frac{\omega}{2} \int_V \lr{ -\epsilon' \Abs{\BE}^2 + \mu' \Abs{\BH}^2 } dV
 \end{aligned}
 \end{equation}
