--- a/version_bash.tex
+++ b/version_bash.tex
@@ -11,7 +11,7 @@ Should you wish to actively contribute typo fixes (or even more significant chan
 git clone git@github.com:peeterjoot/latex-notes-compilations.git peeterjoot
 cd peeterjoot
 
-submods="figures/ece1236-microwaves mathematica ece1236-microwaves latex"
+submods="figures/ece1236-microwaves matlab julia mathematica ece1236-microwaves latex"
 for i in $submods ; do
    git submodule update --init $i
    (cd $i && git checkout master)
